# fridayNrag

./: livekit_agent.py  main.py  pyproject.toml  rag_utils.py
uploads/: DATAPRIVACY_forResearchPaper(finalTopic).docx.docx  Lead Agent - Sheet1.csv  OotyPlan.txt  audio-[AudioTrimmer.com].wav.txt
